k8s/erpnext/templates/queue-long-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-long
spec:
  replicas: 1

  selector:
    matchLabels:
      app: queue-long

  template:
    metadata:
      labels:
        app: queue-long

    spec:
      containers:
        - name: queue-long
          image: frappe/erpnext:v16.33.0

          command:
            - bench
            - worker
            - --queue
            - long
