k8s/erpnext/templates/redis-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis-cache

  template:
    metadata:
      labels:
        app: redis-cache

    spec:
      containers:
        - name: redis-cache
          image: shiva9828/frappe-redis-cache:v6.2-alpine

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
