k8s/erpnext/templates/redis-queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-queue
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis-queue

  template:
    metadata:
      labels:
        app: redis-queue

    spec:
      containers:
        - name: redis-queue
          image: shiva9828/frappe-redis-queue:v6.2-alpine

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
