k8s/erpnext/templates/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1

  selector:
    matchLabels:
      app: scheduler

  template:
    metadata:
      labels:
        app: scheduler

    spec:
      containers:
        - name: scheduler
          image: frappe/erpnext:v16.33.0

          command:
            - bench
            - schedule
