k8s/erpnext/templates/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1

  selector:
    matchLabels:
      app: websocket

  template:
    metadata:
      labels:
        app: websocket

    spec:
      containers:
        - name: websocket
          image: frappe/erpnext:v16.33.0

          command:
            - node
            - /home/frappe/frappe-bench/apps/frappe/socketio.js

          ports:
            - containerPort: 9000
