k8s/erpnext/templates/db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: erpnext-db

spec:
  type: ClusterIP

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

  selector:
    app: erpnext-db
