k8s/erpnext/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend

  ports:
    - name: http
      port: 8080
      targetPort: 8000

  type: ClusterIP
