k8s/erpnext/templates/redis-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
spec:
  selector:
    app: redis-cache

  ports:
    - port: 6379
      targetPort: 6379

  type: ClusterIP
