k8s/erpnext/templates/redis-queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-queue
spec:
  selector:
    app: redis-queue
  ports:
    - port: 6379
      targetPort: 6379
