k8s/erpnext/templates/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket
spec:
  selector:
    app: websocket

  ports:
    - port: 9000
      targetPort: 9000

  type: ClusterIP
